--- a/components/ql403li2i-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/ql403li2i-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: ql403li2i-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-f400c95499.vgc3.p3.openshiftapps.com/rhtap/rhtap-qe:8bec8b0dd927c1fe4c0feaf4b96375686fea3b26@sha256:ea2a2d3a40bc0ba6dcfb759ba050f01653665c15bad0499cd66fb62c25f0aeb4
+          name: container-image
